<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_16"
        android:paddingTop="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_16"
        android:paddingBottom="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_article_title"
            android:textColor="@color/common_color"
            android:textSize="@dimen/sp_14" />

        <EditText
            android:id="@+id/et_article_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/share_article_title_tip"
            android:inputType="text|textMultiLine"
            android:minHeight="@dimen/dp_60"
            android:textColor="@color/common_color"
            android:textSize="@dimen/sp_16" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/share_article_link"
            android:textColor="@color/common_color"
            android:textSize="@dimen/sp_14" />

        <EditText
            android:id="@+id/et_article_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/share_article_link_tip"
            android:inputType="text|textMultiLine"
            android:minHeight="@dimen/dp_60"
            android:textColor="@color/common_color"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_16"
        android:lineSpacingExtra="@dimen/dp_2"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_20"
        android:text="@string/share_article_tip"
        android:textColor="@color/item_desc"
        android:textSize="@dimen/sp_12" />

</RelativeLayout>